content/terraform-tfctl-cli/v0.3.x/docs/tfctl-cli/install.mdx
---
page_title: Install tfctl
description: |-
  Learn how to install the tfctl CLI on macOS, Linux, and Windows using Homebrew, pre-built binaries, or by building from source.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-07-30T22:07:33.000Z
last_modified: 2026-07-30T22:07:33.000Z
# END AUTO GENERATED METADATA
---

# Install tfctl

This page describes how to install the tfctl CLI on your system. The tfctl CLI is available through Homebrew, as pre-built binaries, or you can build it from source.

## Installation

HashiCorp distributes the tfctl cli as an executable binary that you can install on supported operating systems, including Microsoft Windows, macOS, and several Linux distributions.

<Tabs>

<Tab heading="Manual installation">

To install `tfctl`, visit the [HashiCorp releases website](https://releases.hashicorp.com/tfctl/) to download the appropriate binary for your operating system as a zip archive.

After you download `tfctl`, unzip the archive.

Finally, make sure that the `tfctl` binary is available in a directory that is in your system's `PATH`. 

Every build of `tfctl` includes a `SHA256SUMS` and a `SHA256SUMS.sig` file to validate your downloaded binary. Refer to the [verify HashiCorp binary downloads tutorial](https://developer.hashicorp.com/well-architected-framework/operational-excellence/verify-hashicorp-binary) for more information.

</Tab>

<Tab heading="Homebrew on macOS">
To install tfctl with Homebrew, you will need Homebrew installed on your system.

[Homebrew](https://brew.sh/) is a free and open-source package management system for macOS. You can install the official [Hashicorp tap](https://github.com/hashicorp/homebrew-tap) and then tfctl from your terminal.

First, install the HashiCorp tap, a repository of all our Homebrew packages.

```shell-session
$ brew tap hashicorp/tap
```

Now, install `tfctl` with the `hashicorp/tap/tfctl` formula.

```shell-session
$ brew install hashicorp/tap/tfctl
```

</Tab>

<Tab heading="Build from source">

To build tfctl from source, you need Go 1.26.4 or later installed on your system.

1. Clone the tfctl repository:

   ```shell-session
   $ git clone https://github.com/hashicorp/tfctl-cli.git
   $ cd tfctl-cli
   ```

1. Build and install the binary using make:

   ```shell-session
   $ make go/install
   ```

1. Verify the installation:

   ```shell-session
   $ tfctl --version
   ```

</Tab>

</Tabs>

## Verify installation

Verify that the installation worked by opening a new terminal and using the `--help` flag of `tfctl`:

```shell-session
$ tfctl --help
USAGE
  tfctl <command> [Optional Flags]

DESCRIPTION
  The tfctl command-line interface (CLI) is a unified tool for managing HCP
  Terraform and Terraform Enterprise from the command line.

COMMAND GROUPS
  auth:      Authenticate with HCP Terraform.
  harness:   Install coding agent skills and see agent context.
  profile:   View and edit tfctl CLI configuration properties.
  run:       Inspect and manage runs.
  variable:  Manage variables in workspaces or variable sets.

COMMANDS
  api:     Perform any API request
  create:  Create a resource
  get:     Get or list a resource

## ...
```

## Install shell completion

We recommend installing the shell completion module for command, argument, and API path completion:

```shell-session
$ tfctl --autocomplete-install
```

You can uninstall shell completion with the following command:

```shell-session
$ tfctl --autocomplete-uninstall
```

## Install AI agent skill

The tfctl CLI ships with agent skills that give AI coding agents access to HCP Terraform through the `tfctl` command. You can install it using the `tfctl harness install` command. Replace `<agent>` with one of the following supported AI agents:

- `amp`
- `antigravity`
- `bob`
- `claude`
- `codex`
- `copilot`
- `opencode`
- `pi`

To install the skill, run:

```shell-session
$ tfctl harness install <agent> --global
```

This adds the skill to your user profile so that compatible agents can use `tfctl` commands on your behalf.

## Run tfctl in Docker

If you have a `TFCTL_TOKEN` environment variable set, you can invoke tfctl using Docker:

```shell-session
$ docker run -e TFCTL_TOKEN hashicorp/tfctl
```

Refer to [CLI reference - Configuration](/terraform/tfctl-cli/reference/cli#configuration) for more information about environment variables.

## Next steps

After installing tfctl, complete the following tasks:

- [Authenticate with HCP Terraform](/terraform/tfctl-cli/authenticate)
