content/terraform-tfctl-cli/v0.4.x/docs/tfctl-cli/install.mdx
---
page_title: Install tfctl
description: |-
  Learn how to install the tfctl CLI on macOS, Linux, and Windows using Homebrew, pre-built binaries, or by building from source.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-07-30T22:07:33.000Z
last_modified: 2026-07-30T22:07:33.000Z
# END AUTO GENERATED METADATA
---

# Install tfctl

This topic describes how to install the tfctl CLI on your system and how to integrate it with your AI agents. The tfctl CLI is available through Homebrew, as pre-built binaries, or you can build it from source.

## Installation

HashiCorp distributes the tfctl cli as an executable binary that you can install on supported operating systems, including Microsoft Windows, macOS, and several Linux distributions.

<Tabs>

<Tab heading="Manual installation">

To install `tfctl`, visit the [HashiCorp releases website](https://releases.hashicorp.com/tfctl/) to download the appropriate binary for your operating system as a zip archive.

After you download `tfctl`, unzip the archive.

Finally, make sure that the `tfctl` binary is available in a directory that is in your system's `PATH`. 

Every build of `tfctl` includes a `SHA256SUMS` and a `SHA256SUMS.sig` file to validate your downloaded binary. Refer to the [verify HashiCorp binary downloads tutorial](https://developer.hashicorp.com/well-architected-framework/operational-excellence/verify-hashicorp-binary) for more information.

</Tab>

<Tab heading="Homebrew on MacOS">

To install tfctl with Homebrew, you will need Homebrew installed on your system.

[Homebrew](https://brew.sh/) is a free and open-source package management system for macOS. You can install the official [Hashicorp tap](https://github.com/hashicorp/homebrew-tap) and then tfctl from your terminal.

First, install the HashiCorp tap, a repository of all our Homebrew packages.

```shell-session
$ brew tap hashicorp/tap
```

Now, install `tfctl` with the `hashicorp/tap/tfctl` formula.

```shell-session
$ brew install hashicorp/tap/tfctl
```

</Tab>

<Tab heading="Build from source">

To build tfctl from source, you need Go 1.26.4 or later installed on your system.

1. Clone the tfctl repository and change into the new directory:

   ```shell-session
   $ git clone https://github.com/hashicorp/tfctl-cli.git && cd tfctl-cli
   ```

1. Build and install the binary using make:

   ```shell-session
   $ make go/install
   ```

</Tab>

</Tabs>

## Verify installation

Verify that the installation worked by opening a new terminal and using the `--help` flag of `tfctl`:

```shell-session
$ tfctl --help
USAGE
  tfctl <command> [Optional Flags]

DESCRIPTION
  The tfctl command-line interface (CLI) is a unified tool for managing HCP
  Terraform and Terraform Enterprise from the command line.

COMMAND GROUPS
  auth:      Authenticate with HCP Terraform.
  harness:   Install coding agent skills and see agent context.
  profile:   View and edit tfctl CLI configuration properties.
  run:       Inspect and manage runs.
  variable:  Manage variables in workspaces or variable sets.

COMMANDS
  api:     Perform any API request
  create:  Create a resource
  get:     Get or list a resource

## ...
```

## Install shell completion

We recommend installing the shell completion module for command, argument, and API path completion:

```shell-session
$ tfctl --autocomplete-install
```

You can uninstall shell completion with the following command:

```shell-session
$ tfctl --autocomplete-uninstall
```

## Install AI agent skill

If you use an AI coding assistant like Claude Desktop, GitHub Copilot, IBM Bob, or similar tools, you can install the tfctl skill to enable HCP Terraform operations. AI coding agents can execute tfctl commands on your behalf, giving your agent structured access to HCP Terraform operations.

You can install the skill using the `tfctl harness install` command. Replace `<AGENT>` with one of the following supported AI agents:

- `amp`
- `antigravity`
- `bob`
- `claude`
- `codex`
- `copilot`
- `opencode`
- `pi`

You can install agent skills with `tfctl harness install`, or with [npx](https://docs.npmjs.com/cli/v12/commands/npx).

### Install a skill with tfctl

To install the skill with tfctl, run:

```shell-session
$ tfctl harness install <AGENT> --global
```

This adds the skill to your user profile so that your agents can use `tfctl` commands on your behalf.

### Install a skill with npx

To install the skill with npx, run:

```shell-session
$ npx skills add hashicorp/tfctl-cli --skill 'tfctl'
```

This opens an interactive prompt so that you can select the skills to install.

## Run tfctl in Docker

If you have a `TFCTL_TOKEN` environment variable set, you can invoke tfctl using Docker:

```shell-session
$ docker run -e TFCTL_TOKEN hashicorp/tfctl
```

Refer to [CLI reference - Configuration](/terraform/tfctl-cli/reference/cli#configuration) for more information about environment variables.

## Telemetry

By default, HashiCorp collects anonymous, redacted trace telemetry for each command invocation, including the command name, exit status, network metrics, and basic process information. You can disable telemetry at any time.

To disable telemetry, use one of these methods:

- Set the `TFCTL_TELEMETRY` environment variable to `disabled`
- Set the `DO_NOT_TRACK` environment variable to `true`
- Configure in your profile: `tfctl profile set telemetry disabled`

Refer to [Telemetry](/terraform/tfctl-cli/reference/cli#telemetry) in the CLI reference for more information.

## Next steps

After installing tfctl, authenticate it with HCP Terraform:

- [Authenticate with HCP Terraform](/terraform/tfctl-cli/authenticate)
